Рефакторинг BootstrapMain и вынос логики блокировки в BootstrapInstanceLocker